tests/EtaX/EtaX.prop/EtaX.prop.3.0-old.check
// exitCode: 1   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
-- [E007] Type Mismatch Error: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6:23 
6 |  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
  |                       ^^^^
  |                       Found:    String
  |                       Required: () => Any
1 error found
// exitCode: 0   val t2b: Any       = { val t = prop   ; t } // ok: apply
// exitCode: 1   val t2c: () => Any = prop()                 // error: bar doesn't take arguments, so expanded to bar.apply(), which misses an argument
-- Error: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.02.scala:8:27 --------
8 |  val t2c: () => Any = prop()                 // error: bar doesn't take arguments, so expanded to bar.apply(), which misses an argument
  |                       ^^^^^^
  |          missing argument for parameter i of method apply: (i: Int): Char
1 error found
// exitCode: 0   val t2d: () => Any = prop _                 // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.03.scala:9:28 
9 |  val t2d: () => Any = prop _                 // ok
  |                       ^^^^^^
  |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found
// exitCode: 0   val t2e: () => Any = { val t = prop _ ; t } // ?/ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.04.scala:10:38 
10 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                 ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found
// exitCode: 0   val t2f: Any       = prop _                 // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.05.scala:11:28 
11 |  val t2f: Any       = prop _                 // ok
   |                       ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found
// exitCode: 1   val t2g: Any       = prop() _               // error: not enough arguments for method apply
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.06.scala:12:30 
12 |  val t2g: Any       = prop() _               // error: not enough arguments for method apply
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error unspecified error></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- Error: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.06.scala:12:27 -------
12 |  val t2g: Any       = prop() _               // error: not enough arguments for method apply
   |                       ^^^^^^
   |        missing argument for parameter i of method apply: (i: Int): Char
1 warning found
1 error found
